# play-by-post-helper

./: .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  environment.yml  modron_config.yml  modron_state.yml  pyproject.toml  requirements.txt  server.py  setup.py  start-service.sh  test-requirements.txt
.github/workflows/: python-app.yml
characters/kaluth/: adrianna.yml  childermass.yml  dave.yml  hubryr.yml  mezu.yml  modron.yml
characters/pendragon/: alek.yml  modron.yml
creds/gdrive/: get-gdrive-creds.py
dice-logs/: kaluth-test.csv  kaluth.csv
docs/: development.md  installation.md  user-guide.md
modron/: __init__.py  app.py  bot.py  characters.py  config.py  db.py  dice.py  discord.py  events.py  npc.py  slack.py  utils.py
modron/characters/: __init__.py  base.py  dnd.py  pendragon.py  utils.py
modron/dice/: __init__.py  stats.py
modron/interact/: __init__.py  _argparse.py  base.py  character.py  dice_roll.py  followup.py  npc.py  reminder.py  stats.py
modron/services/: __init__.py  backup.py  reminder.py
modron/tests/: conftest.py  joe.yaml  test_app.py  test_characters.py  test_db.py  test_dice.py  test_dice_stats.py  test_discord.py  test_slack.py  test_state.py
modron/views/: __init__.py  auth.py  decorators.py  players.py  status.py
tests/: conftest.py  test_app.py  test_characters.py  test_config.py  test_db.py  test_dice.py  test_dice_stats.py  test_discord.py  test_utils.py
tests/characters/: joe.yaml  test_dnd.py  test_pendragon.py
tests/interact/: conftest.py  test_character.py  test_dice_command.py  test_npc.py  (+3 more)
(+30 files in other folders)
